--- a/nj-demo-azure-pipelines.yml
+++ b/nj-demo-azure-pipelines.yml
@@ -4,26 +4,6 @@ pool:
   vmImage: ubuntu-latest
  
 stages:
-  - stage: Build
-    jobs: 
-      - job: Build
-        steps:
-          - script: echo "This is the planning phase of the request."
-  - stage: Dev
-    jobs:
-     - job: Initial_Source
-       steps:
-        - script: echo "This is the development phase of the request."
-  - stage: QA
-    jobs:
-     - job: Unit_Test
-       steps:
-        - script: echo "This is the code deployment phase to test instance."
-  - stage: UAT
-    jobs:
-     - job: Regression_Test
-       steps:
-        - script: echo "This is the UAT testing phase of the request."
         
   - stage: Prod    
     jobs:
@@ -33,7 +13,7 @@ stages:
 #- script: echo This is the production deployement phase!
         - task: ServiceNow-DevOps-Server-Change-Acceleration@1
           inputs:
-            connectedServiceName: 'dev218664-NJ- DevOps Practice-ServiceNow DevOps Service Connection'
+            connectedServiceName: 'Servicenow Devops-Azure'
             changeRequestDetails: |
               {
                   "setCloseCode" : true,
@@ -44,5 +24,9 @@ stages:
                     },
                     "start_date": "2025-01-05 08:00:00",
                     "end_date": "2025-01-08 08:00:00",
+                    "cab_required": "yes",
+                    "assignment_group": {
+                      "name": "Analytics Settings Managers"
+                    }
                   }
                 }
